feat: create API for activation user
