# src/docs/swagger-output.json
@@ -89,6 +89,32 @@
         }
       }
     },
+    "auth/activation": {
+      "post": {
+        "tags": [],
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/activationRequest"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#/components/schemas/activationRequest"
+              }
+            }
+          }
+        }
+      }
+    },
     "/auth/me": {
       "get": {
         "tags": [
@@ -158,6 +184,19 @@
           "userName",
           "password",
           "confirmPassword"
+        ]
+      },
+      "activationRequest": {
+        "type": "object",
+        "properties": {
+          "activationCode": {
+            "type": "string",
+            "description": "Activation code sent to the user's email",
+            "example": "1234567890abcdef"
+          }
+        },
+        "required": [
+          "activationCode"
         ]
       },
       "loginRequest": {
