# src/models/usersModel.ts
@@ -63,6 +63,7 @@ const UserSchema = new Schema<IUser>(
 UserSchema.pre("save", function (next) {
   const user = this;
   user.password = encrypt(user.password);
+  user.activationCode = encrypt(user.id);
   next();
 });
 
